background image fixed and offset on mobile too

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h1 {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 #container {
@@ -176,14 +177,16 @@ h1 {
     justify-content: center;
     grid-template-columns: 33% 33% 33%;
     grid-column-gap: 20px;
-    margin: 10px;
+    margin: 0px 10vw;
     margin-top: 50px;
 }
 
 .hom-button {
     text-align: center;
+    line-height: 20px;
+    font-size: 1.2em;
     border: 1px solid transparent;
-    padding: 10px;
+    padding: 2vw 10px;
     border-radius: 5px;
     transition: 0.3s;
     cursor: pointer;
@@ -261,5 +264,12 @@ h1 {
 
     #background-img {
         margin-right: -35px;
+        background-attachment:fixed;
+        background-position: right -30px bottom 0px;
+
+    }
+
+    #hom-button-container {
+        margin: 50px 0px;
     }
 }
